crates/cyrs-sema/tests/snapshots/resolved_hir__01_simple_match_return.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline(\"MATCH (n) RETURN n\")"
---
Statement {
  span: 0..18
  bindings: [
    Var(0) 0: n (Node) @7..8
  ]
  clauses: [
    Match @0..9 {
      Pattern {
        part[0] [
          Node(n[bind:Var(0)←Node@7..8]) @5..9
        ]
      }
    }
    Return(distinct=false) @9..18 {
      proj[0]: Var(0)[n←Node@7..8]
    }
  ]
}
