crates/cyrs-sema/tests/snapshots/resolved_hir__04_three_hop_chain.snap
---
source: crates/cyrs-sema/tests/resolved_hir.rs
expression: "pipeline(\"MATCH (a)-[:R1]->(b)-[:R2]->(c) RETURN a, b, c\")"
---
Statement {
  span: 0..46
  bindings: [
    Var(0) 0: a (Node) @7..8
    Var(1) 1: b (Node) @18..19
    Var(2) 2: c (Node) @29..30
  ]
  clauses: [
    Match @0..31 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@7..8]) @5..9
          Rel(-> _anon:R1) @9..17
          Node(b[bind:Var(1)←Node@18..19]) @17..20
          Rel(-> _anon:R2) @20..28
          Node(c[bind:Var(2)←Node@29..30]) @28..31
        ]
      }
    }
    Return(distinct=false) @31..46 {
      proj[0]: Var(0)[a←Node@7..8]
      proj[1]: Var(1)[b←Node@18..19]
      proj[2]: Var(2)[c←Node@29..30]
    }
  ]
}
